--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,2 @@
-DATABASE_URL=postgres://postgres:postgres@localhost:5432/postgres
+MONGODB_URI=mongodb://localhost:27017/app-name
 APP_SECRET=CHANGETHIS
-#PGSSLMODE=require
